--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ description: A package for testing http clients on flutter or the Dart vm.
 homepage: https://github.com/jonahwilliams/http_test_client
 
 dev_dependencies:
-  test: ^0.12.32
+  flutter_test:
+      sdk: flutter
 
 environment:
-  sdk: '>=1.19.0 <2.0.0'
+  sdk: '>2.0.0'
